includedir = $(prefix)/include/prelude-lml

noinst_HEADERS = \
        common.h \
        hashkey.h \
        libmissing.h \
        log-common.h \
        log.h \
        plugin-log.h \
        regex.h \
        udp-server.h \
        lml-options.h \
        file-server.h \
        plugin-log-prv.h

include_HEADERS =                               \
        lml-alert.h \
        log-common.h \
        plugin-log.h

