includedir = $(prefix)/include/prelude-lml

noinst_HEADERS = 	\
        common.h 	\
        libmissing.h 	\
        log-common.h 	\
	log-plugins.h	\
        regex.h 	\
        udp-server.h 	\
        lml-options.h 	\
        file-server.h 	

include_HEADERS =	\
        lml-alert.h 	\
        log-common.h 	\
	prelude-lml.h

