includedir = $(prefix)/include/prelude-lml

noinst_HEADERS = 	\
        common.h 	\
	lml-alert.h	\
	lml-charset.h	\
        lml-options.h 	\
	log-entry.h	\
	log-source.h	\
	log-plugins.h	\
        regex.h 	\
        tcp-server.h    \
        tcp-server-tls.h \
        udp-server.h 	\
        file-server.h 	

include_HEADERS = prelude-lml.h


-include $(top_srcdir)/git.mk
