ruleset_DATA = \
	apc-emu.rules		\
	arpwatch.rules		\
	cisco-pix.rules		\
	cisco-router.rules	\
	cisco-vpn.rules		\
	clamav.rules		\
	dell-om.rules		\
	f5-bigip.rules		\
	grsecurity.rules	\
	honeyd.rules		\
	httpd.rules		\
	ipchains.rules		\
	ipfw.rules		\
	modsecurity.rules	\
	ms-sql.rules		\
	nagios.rules		\
	navce.rules		\
	netapp-ontap.rules	\
	netfilter.rules		\
	ntsyslog.rules		\
	pam.rules		\
	pcanywhere.rules	\
	pcre.rules		\
	portsentry.rules	\
	proftpd.rules		\
	qpopper.rules		\
	selinux.rules		\
	sendmail.rules		\
	shadow-utils.rules	\
	single.rules		\
	squid.rules		\
	ssh.rules		\
	sudo.rules		\
	tripwire.rules		\
	vigor.rules		\
	vpopmail.rules		\
	linksys-wap11.rules	\
	webmin.rules		\
	wu-ftp.rules		



rulesetdir = $(configdir)/ruleset

EXTRA_DIST = $(ruleset_DATA)
