SUBDIRS = unsupported

ruleset_DATA = \
	apc-emu.rules		\
	arbor.rules		\
	arpwatch.rules		\
	cacti-thold.rules	\
	checkpoint.rules	\
	cisco-asa.rules		\
	cisco-css.rules		\
	cisco-router.rules	\
	cisco-vpn.rules		\
	clamav.rules		\
	dell-om.rules		\
	f5-bigip.rules		\
	grsecurity.rules	\
	honeyd.rules		\
	httpd.rules		\
	ipchains.rules		\
	ipfw.rules		\
	modsecurity.rules	\
	ms-sql.rules		\
	nagios.rules		\
	navce.rules		\
	netapp-ontap.rules	\
	netfilter.rules		\
	netscreen.rules		\
	ntsyslog.rules		\
	openhostapd.rules	\
	pam.rules		\
	pcanywhere.rules	\
	pcre.rules		\
	portsentry.rules	\
	postfix.rules		\
	proftpd.rules		\
	qpopper.rules		\
	selinux.rules		\
	sendmail.rules		\
	shadow-utils.rules	\
	single.rules		\
	sonicwall.rules		\
	spamassassin.rules	\
	squid.rules		\
	ssh.rules		\
	sudo.rules		\
	tripwire.rules		\
	vigor.rules		\
	vpopmail.rules		\
	linksys-wap11.rules	\
	webmin.rules		\
	wu-ftp.rules		



rulesetdir = $(configdir)/ruleset

EXTRA_DIST = $(ruleset_DATA)
