SUBDIRS = unsupported

ruleset_DATA = \
	apc-emu.rules		\
	arbor.rules		\
	arpwatch.rules		\
	asterisk.rules		\
	bonding.rules		\
	cacti-thold.rules	\
	checkpoint.rules	\
	cisco-asa.rules		\
	cisco-common.rules	\
	cisco-css.rules		\
	cisco-ips.rules		\
	cisco-router.rules	\
	cisco-vpn.rules		\
	clamav.rules		\
	dell-om.rules		\
	f5-bigip.rules		\
	grsecurity.rules	\
	honeyd.rules		\
	honeytrap.rules		\
	httpd.rules		\
	ipchains.rules		\
	ipfw.rules		\
	kojoney.rules		\
	modsecurity.rules	\
	ms-cluster.rules	\
	ms-sql.rules		\
	nagios.rules		\
	navce.rules		\
	netapp-ontap.rules	\
	netfilter.rules		\
	netscreen.rules		\
	ntsyslog.rules		\
	openhostapd.rules	\
	pam.rules		\
	pcanywhere.rules	\
	pcre.rules		\
	portsentry.rules	\
	postfix.rules		\
	ppp.rules		\
	proftpd.rules		\
	qpopper.rules		\
	rishi.rules		\
	selinux.rules		\
	sendmail.rules		\
	shadow-utils.rules	\
	single.rules		\
	snare_windows.rules	\
	sonicwall.rules		\
	spamassassin.rules	\
	squid.rules		\
	su.rules		\
	ssh.rules		\
	sudo.rules		\
	suhosin.rules		\
	tripwire.rules		\
	vigor.rules		\
	vpopmail.rules		\
	linksys-wap11.rules	\
	webmin.rules		\
	wu-ftp.rules



rulesetdir = $(configdir)/ruleset

EXTRA_DIST = $(ruleset_DATA)

-include $(top_srcdir)/git.mk
