ruleset_DATA = \
	apc-emu.rules		\
	checkpoint.rules	\
	cisco.rules		\
	cisco-pix.rules		\
	cisco-vpn.rules		\
	grsecurity.rules	\
	honeyd.rules		\
	ipchains.rules		\
	ipfw.rules		\
	ipso.rules		\
	ms-sql.rules		\
	nagios.rules		\
	navce.rules		\
	netfilter.rules		\
	ntsyslog.rules		\
	pam.rules		\
	portsentry.rules	\
	proftpd.rules		\
	qpopper.rules		\
	simple.rules		\
	single.rules		\
	squid.rules		\
	ssh.rules		\
	sudo.rules		\
	vigor.rules		\
	vpopmail.rules		\
	wap11.rules		\
	wu-ftp.rules		\
	zywall.rules		\
	zyxel.rules



rulesetdir = $(configdir)/ruleset

EXTRA_DIST = $(ruleset_DATA)
