ruleset_DATA = \
	apc-emu.rules		\
	cisco-pix.rules		\
	cisco-vpn.rules		\
	clamav.rules		\
	grsecurity.rules	\
	honeyd.rules		\
	ipchains.rules		\
	ipfw.rules		\
	ipso.rules		\
	modsecurity.rules	\
	ms-sql.rules		\
	nagios.rules		\
	navce.rules		\
	ntsyslog.rules		\
	pam.rules		\
	pcanywhere.rules	\
	portsentry.rules	\
	proftpd.rules		\
	qpopper.rules		\
	shadow-utils.rules	\
	simple.rules		\
	single.rules		\
	squid.rules		\
	ssh.rules		\
	sudo.rules		\
	tripwire.rules		\
	vigor.rules		\
	vpopmail.rules		\
	wap11.rules		\
	webmin.rules		\
	wu-ftp.rules		



rulesetdir = $(configdir)/ruleset

EXTRA_DIST = $(ruleset_DATA)
