ruleset_DATA = \
	apc-emu.rules		\
	bigip.rules		\
	cisco-pix.rules		\
	cisco-router.rules	\
	cisco-vpn.rules		\
	clamav.rules		\
	dell-om.rules		\
	grsecurity.rules	\
	honeyd.rules		\
	ipchains.rules		\
	ipfw.rules		\
	ipso.rules		\
	modsecurity.rules	\
	ms-sql.rules		\
	nagios.rules		\
	navce.rules		\
	netfilter.rules		\
	ntsyslog.rules		\
	pam.rules		\
	pcanywhere.rules	\
	portsentry.rules	\
	postfix.rules		\
	proftpd.rules		\
	qpopper.rules		\
	sendmail.rules		\
	shadow-utils.rules	\
	simple.rules		\
	single.rules		\
	squid.rules		\
	ssh.rules		\
	sudo.rules		\
	tripwire.rules		\
	vigor.rules		\
	vpopmail.rules		\
	wap11.rules		\
	webmin.rules		\
	wu-ftp.rules		



rulesetdir = $(configdir)/ruleset

EXTRA_DIST = $(ruleset_DATA)
